# AssemblyAI-UI

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
src/: __main__.py  app.py  config.py  postprocessor.py  prompts.yaml  transcriber.py
