[project]
name = "assemblyai-transcriber"
version = "0.1.0"
description = "Desktop speech recognition service powered by AssemblyAI"
requires-python = ">=3.11"
dependencies = [
    "assemblyai",
    "gradio",
    "openai",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["openai-smart-client"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
